# myboardgames

_frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
_frontend/app/assets/css/: main.css
_frontend/app/components/: HeaderBlock.vue  NewParticipantBlock.vue  RankingBlock.vue
_frontend/app/data/constants/: index.ts
_frontend/app/layouts/: default.vue  game.vue
_frontend/app/pages/: index.vue
_frontend/app/pages/games/: index.vue
_frontend/app/pages/games/dune-imperium/: index.vue  ranking.vue
_frontend/app/pages/games/wonderful-world/: index.vue  ranking.vue
_frontend/app/pages/rankings/: add.vue  index.vue
_frontend/app/types/: index.ts
frontend/: nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/assets/css/: main.css
frontend/app/components/wonderful/base/: Card.vue  Drafted.vue  Hand.vue
frontend/app/composables/use/: index.ts
frontend/app/data/constants/: index.ts
frontend/app/data/fixtures/: index.ts
frontend/app/layouts/: default.vue  wonderful.vue
frontend/app/pages/: index.vue
frontend/app/pages/wonderful/: cards.vue  index.vue
frontend/app/types/: index.ts
its_a_wonderful_world/: _quick.py  actions.py  main.py  models.py  pyproject.toml  typings.py
its_a_wonderful_world/logic/: base.py  player.py
its_a_wonderful_world/material/: __init__.py
its_a_wonderful_world/material/card/: __init__.py  discovery.py  project.py  research.py  structure.py  vehicle.py
its_a_wonderful_world/tests/: test_game.py  test_player.py
its_a_wonderful_world/tests/materials/: test_cards.py
